done sponsor endpoints
